force-app/main/default/objects/Documnet_Template_Config__c/Documnet_Template_Config__c.object-meta.xml
<CustomObject>
    <label>Document Template Config</label>
    <nameField>
        <displayFormat>DTC-{0000}</displayFormat>
        <label>Documnet Template Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Template Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>