force-app/main/default/objects/Documnet_Template_Config__c/fields/Font_Family__c.field-meta.xml
<CustomField>
    <fullName>Font_Family__c</fullName>
    <label>Font Family</label>
    <length>234</length>
    <type>Text</type>
</CustomField>