force-app/main/default/objects/Documnet_Template_Config__c/fields/Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Font_Size__c</fullName>
    <label>Font Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>