force-app/main/default/objects/Documnet_Template_Config__c/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <label>Footer Text</label>
    <length>234</length>
    <type>Text</type>
</CustomField>