force-app/main/default/objects/Documnet_Template_Config__c/fields/Footer_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text_Color__c</fullName>
    <label>Footer Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>