force-app/main/default/objects/Documnet_Template_Config__c/fields/Footer_Text_Position__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text_Position__c</fullName>
    <label>Footer Text Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>