force-app/main/default/objects/Documnet_Template_Config__c/fields/Header_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Border_Color__c</fullName>
    <label>Header Border Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>