force-app/main/default/objects/Documnet_Template_Config__c/fields/Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Header_Text__c</fullName>
    <label>Header Text</label>
    <length>234</length>
    <type>Text</type>
</CustomField>