force-app/main/default/objects/Documnet_Template_Config__c/fields/Header_Text_Position__c.field-meta.xml
<CustomField>
    <fullName>Header_Text_Position__c</fullName>
    <label>Header Text Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>