force-app/main/default/objects/Documnet_Template_Config__c/fields/Horizontal_Margin__c.field-meta.xml
<CustomField>
    <fullName>Horizontal_Margin__c</fullName>
    <label>Horizontal Margin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>