force-app/main/default/objects/Documnet_Template_Config__c/fields/is_Apply_Logo__c.field-meta.xml
<CustomField>
    <fullName>is_Apply_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Apply Logo</label>
    <type>Checkbox</type>
</CustomField>