force-app/main/default/objects/Documnet_Template_Config__c/fields/is_Header_Border_Apply__c.field-meta.xml
<CustomField>
    <fullName>is_Header_Border_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Header Border Apply</label>
    <type>Checkbox</type>
</CustomField>