force-app/main/default/objects/Documnet_Template_Config__c/fields/Logo_Filter__c.field-meta.xml
<CustomField>
    <fullName>Logo_Filter__c</fullName>
    <label>Logo Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>