force-app/main/default/objects/Documnet_Template_Config__c/fields/Logo_Height__c.field-meta.xml
<CustomField>
    <fullName>Logo_Height__c</fullName>
    <label>Logo Height</label>
    <length>100</length>
    <type>Text</type>
</CustomField>