force-app/main/default/objects/Documnet_Template_Config__c/fields/Logo_Position__c.field-meta.xml
<CustomField>
    <fullName>Logo_Position__c</fullName>
    <label>Logo Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>