force-app/main/default/objects/Documnet_Template_Config__c/fields/Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Url__c</fullName>
    <label>Logo Url</label>
    <type>Url</type>
</CustomField>