force-app/main/default/objects/Documnet_Template_Config__c/fields/Logo_Width__c.field-meta.xml
<CustomField>
    <fullName>Logo_Width__c</fullName>
    <label>Logo Width</label>
    <length>234</length>
    <type>Text</type>
</CustomField>