force-app/main/default/objects/Documnet_Template_Config__c/fields/Page_Number_Formate__c.field-meta.xml
<CustomField>
    <fullName>Page_Number_Formate__c</fullName>
    <label>Page Number Formate</label>
    <length>234</length>
    <type>Text</type>
</CustomField>