force-app/main/default/objects/Documnet_Template_Config__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>