force-app/main/default/objects/Documnet_Template_Config__c/fields/UId__c.field-meta.xml
<CustomField>
    <fullName>UId__c</fullName>
    <label>UId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>