force-app/main/default/objects/Documnet_Template_Config__c/fields/Vertical_Margin__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Margin__c</fullName>
    <label>Vertical Margin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>