force-app/main/default/objects/Documnet_Template_Config__c/recordTypes/Document_footer.recordType-meta.xml
<RecordType>
    <fullName>Document_footer</fullName>
    <active>true</active>
    <label>Document footer</label>
</RecordType>