force-app/main/default/objects/Documnet_Template_Config__c/recordTypes/Document_Header.recordType-meta.xml
<RecordType>
    <fullName>Document_Header</fullName>
    <active>true</active>
    <label>Document Header</label>
</RecordType>