force-app/main/default/objects/Documnet_Template_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Template_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>